adicionado Inscrição em Disciplinas

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -43,6 +43,8 @@
           url: /info/calendario-academico/
         - name: Formulários e Requerimentos
           url: /info/formularios/
+        - name: Inscrição em Disciplina
+          url: /info/inscricao-em-disciplina/
     - name: Pós-Graduação
       children:
         - name: PPGI
