--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -73,7 +73,7 @@ gabriel:
 gabrielaquino:
   nome: Gabriel Rodrigues Caldas de Aquino
   lattes: https://lattes.cnpq.br/4613499627488074
-  cargo: Adjunto
+  cargo: Assistente
 
 giseli:
   nome: Giseli Rabello Lopes
@@ -90,7 +90,7 @@ hugonobrega:
 hugomg:
   nome: Hugo Musso Gualandi
   lattes: https://lattes.cnpq.br/4885349527302978
-  cargo: Adjunto
+  cargo: Assistente
 
 jpaixao:
   nome: João Antonio Recio Paixão
@@ -139,7 +139,7 @@ marcellogt:
 marcosleipnitz:
   nome: Marcos Tomazzoli Leipnitz
   lattes: https://lattes.cnpq.br/2595714723809105
-  cargo: Adjunto
+  cargo: Assistente
 
 mhelena:
   nome: Maria Helena Cautiero Horta Jardim
@@ -166,7 +166,7 @@ mitre:
 paulomann:
   nome: Paulo Roberto Mann Marques Júnior
   lattes: https://lattes.cnpq.br/3571577377652346
-  cargo: Adjunto
+  cargo: Assistente
 
 rafaelmello:
   nome: Rafael Maiani de Mello
@@ -176,12 +176,12 @@ rafaelmello:
 ronaldsouza:
   nome: Ronald Chiesse de Souza
   lattes: https://lattes.cnpq.br/4970955316457568
-  cargo: Adjunto
+  cargo: Assistente
 
 sergioserra:
   nome: Sérgio Manuel Serra da Cruz
   lattes: https://lattes.cnpq.br/7618571401128973
-  cargo: Adjunto
+  cargo: Assistente
 
 collier:
   nome: Severino Collier Coutinho
@@ -210,7 +210,7 @@ vigusmao:
 vivian:
   nome: Vivan dos Santos Silva
   lattes: https://lattes.cnpq.br/6480849016794725
-  cargo: Adjunto
+  cargo: Assistente
 
 # SUBSTITUTOS
 
