consertado os docentes e sem mais autores para não-notícias

--- a/data/pessoas_e_grupos.yaml
+++ b/data/pessoas_e_grupos.yaml
@@ -3,249 +3,262 @@
 avivacqua:
   nome: Adriana Santarosa Vivacqua
   lattes: https://lattes.cnpq.br/6494676052801758
-  cargo: Associado
+  cargo: associado
 
 aloisiopina:
   nome: Aloísio Carlos de Pina
   lattes: https://lattes.cnpq.br/4830003855063986
-  cargo: Adjunto
+  cargo: adjunto
 
 amaury:
   nome: Amaury Alvarez Cruz
   lattes: https://lattes.cnpq.br/0370476774197561
-  cargo: Adjunto
+  cargo: adjunto
 
 anamaria:
   nome: Anamaria Martins Moreira
   lattes: https://lattes.cnpq.br/2363575151206774
-  cargo: Titular
+  cargo: titular
 
 angela:
   nome: Angela Maria Silva Gonçalves
   lattes: https://lattes.cnpq.br/7053082548725110
-  cargo: Adjunto
+  cargo: adjunto
 
 carla:
   nome: Carla Amor Divino Moreira Delgado
   site: https://ic.ufrj.br/~carla
   lattes: https://lattes.cnpq.br/3831909651244142
-  cargo: Associado
+  cargo: associado
 
 carolina:
   nome: Carolina Gil Marcelino
   lattes: https://lattes.cnpq.br/3289676418940953
-  cargo: Adjunto
+  cargo: adjunto
 
 cfb:
   nome: Claudson Ferreira Bornstein
   site: https://ic.ufrj.br/~cfb
   lattes: https://lattes.cnpq.br/6406237838495230
-  cargo: Associado
+  cargo: associado
 
 danielbastos:
   nome: Daniel Chicayban Bastos
   lattes: https://lattes.cnpq.br/4693433228817945
-  cargo: Assistente
+  cargo: assistente
 
 dgalfaro:
   nome: Daniel Gregório Alfaro Vigo
   site: https://ic.ufrj.br/~dgalfaro
   lattes: https://lattes.cnpq.br/8694890749217765
-  cargo: Associado
+  cargo: associado
 
 sadoc:
   nome: Daniel Sadoc Menasché
   site:   https://ic.ufrj.br/~sadoc
   lattes: https://lattes.cnpq.br/9931198850020140
-  cargo: Associado
 
 eldany:
   nome: Eldanae Nogueira Teixeira
   lattes: https://lattes.cnpq.br/6257705605159525
-  cargo: Adjunto
+  cargo: adjunto
 
 gabriel:
-  nome: Gabriel P. Silva
+  nome: Gabriel Pereira da Silva
   site: https://ic.ufrj.br/~gabriel
   lattes: https://lattes.cnpq.br/8636301961155552
-  cargo: Titular
+  cargo: titular
 
 gabrielaquino:
   nome: Gabriel Rodrigues Caldas de Aquino
   lattes: https://lattes.cnpq.br/4613499627488074
-  cargo: Assistente
+  cargo: assistente
 
 giseli:
   nome: Giseli Rabello Lopes
   site: https://ic.ufrj.br/~giseli
   lattes: https://lattes.cnpq.br/9439416101626260
-  cargo: Adjunto
+  cargo: assistente
 
 hugonobrega:
   nome: Hugo de Holanda Cunha Nobrega
   site: https://hugonobrega.com/
   lattes: https://lattes.cnpq.br/6062840240299930
-  cargo: Adjunto
+  cargo: adjunto
 
 hugomg:
   nome: Hugo Musso Gualandi
   lattes: https://lattes.cnpq.br/4885349527302978
-  cargo: Assistente
+  cargo: assistente
 
 jpaixao:
   nome: João Antonio Recio Paixão
   lattes: https://lattes.cnpq.br/5705386762324718
-  cargo: Adjunto
+  cargo: assistente
 
 jcps:
   nome: João Carlos Pereira da Silva
   site: https://ic.ufrj.br/~jcps
   lattes: https://lattes.cnpq.br/9413102524215939
-  cargo: Associado
+  cargo: associado
 
 jonice:
   nome: Jonice de Oliveira Sampaio
   site: https://ic.ufrj.br/~jonice
   lattes: https://lattes.cnpq.br/0990344839864230
-  cargo: Associado
+  cargo: associado
 
 clima:
   nome: Josefino Cabral Melo Lima
   lattes: https://lattes.cnpq.br/5775431994199579
-  cargo: Titular
+  cargo: titular
 
 julianabsf:
   nome: Juliana Baptista dos Santos França
   lattes: https://lattes.cnpq.br/9341068095520817
-  cargo: Adjunto
+  cargo: adjunto
 
 juvianna:
   nome: Juliana Vianna Valério
   lattes: https://lattes.cnpq.br/7094932502443475
-  cargo: Associado
+  cargo: associado
 
 luziane:
   nome: Luziane Ferreira de Mendonça
   site: https://ic.ufrj.br/~luziane
   lattes: https://lattes.cnpq.br/4092412037479077
-  cargo: Associado
+  cargo: associado
 
 marcellogt:
   nome: Marcello Goulart Teixeira
   site: https://ic.ufrj.br/~marcellogt
   lattes: https://lattes.cnpq.br/1551165098428375
-  cargo: Associado
+  cargo: associado
 
 marcosleipnitz:
   nome: Marcos Tomazzoli Leipnitz
   lattes: https://lattes.cnpq.br/2595714723809105
-  cargo: Assistente
+  cargo: assistente
 
 mhelena:
   nome: Maria Helena Cautiero Horta Jardim
   lattes: https://lattes.cnpq.br/5855175438608498
-  cargo: Adjunto
+  cargo: adjunto
 
 mluiza:
   nome: Maria Luiza Machado Campos
   lattes: https://lattes.cnpq.br/0659658820912418
-  cargo: Associado
+  cargo: associado
 
 rincon:
   nome: Mauro Antonio Rincon
   site: https://ic.ufrj.br/~rincon
   lattes: https://lattes.cnpq.br/2436767709775022
-  cargo: Titular
+  cargo: titular
 
 mitre:
   nome: Mitre Costa Dourado
   site: https://ic.ufrj.br/~mitre
   lattes: https://lattes.cnpq.br/0841425239502177
-  cargo: Titular
+  cargo: titular
 
 paulomann:
   nome: Paulo Roberto Mann Marques Júnior
   lattes: https://lattes.cnpq.br/3571577377652346
-  cargo: Assistente
+  cargo: assistente
 
 rafaelmello:
   nome: Rafael Maiani de Mello
   lattes: https://lattes.cnpq.br/5514393713941443
-  cargo: Adjunto
+  cargo: adjunto
 
 ronaldsouza:
   nome: Ronald Chiesse de Souza
   lattes: https://lattes.cnpq.br/4970955316457568
-  cargo: Assistente
+  cargo: assistente
 
 sergioserra:
   nome: Sérgio Manuel Serra da Cruz
   lattes: https://lattes.cnpq.br/7618571401128973
-  cargo: Assistente
+  cargo: assistente
 
 collier:
   nome: Severino Collier Coutinho
   site: https://ic.ufrj.br/~collier
   lattes: https://lattes.cnpq.br/1416717596426384
-  cargo: Titular
+  cargo: titular
 
 silvana:
   nome: Silvana Rossetto
   site: https://ic.ufrj.br/~silvana
   lattes: https://lattes.cnpq.br/0054098292730720
-  cargo: Associado
+  cargo: associado
 
 valeriab:
   nome: Valeria Menezes Bastos
   site: https://ic.ufrj.br/~valeriab
   lattes: https://lattes.cnpq.br/6948667770415330
-  cargo: Associado
+  cargo: associado
 
 vigusmao:
   nome: Vinícius Gusmão Pereira de Sá
   site: https://ic.ufrj.br/~vigusmao
   lattes: https://lattes.cnpq.br/1507369025671110
-  cargo: Associado
+  cargo: associado
 
 vivian:
   nome: Vivan dos Santos Silva
   lattes: https://lattes.cnpq.br/6480849016794725
-  cargo: Assistente
+  cargo: assistente
 
 # SUBSTITUTOS
 
+
 annarafaela:
   nome: Anna Rafaela Ferreira
-  cargo: Substituto
+  cargo: substituto
 
 cesarraitz:
   nome: Larissa Galeno
-  cargo: Substituto
+  cargo: substituto
 
 luansimoes:
   nome: Luan Simões
-  cargo: Substituto
+  cargo: substituto
 
 lucenildo:
   nome: Lucenildo Cerqueira
-  cargo: Substituto
+  cargo: substituto
 
 luizpaulonascimento:
   nome: Luiz Paulo Nascimento
-  cargo: Substituto
+  cargo: substituto
 
 basiliog:
   nome: Gabriella Basílio
-  cargo: Substituto
+  cargo: substituto
 
 rogers:
   nome: Rogers Reiche
-  cargo: Substituto
+  cargo: substituto
 
 thiagohenrique:
   nome: Thiago Henrique
-  cargo: Substituto
+  cargo: substituto
 
 thiagorocha:
   nome: Thiago José
-  cargo: Substituto
+  cargo: substituto
+
+# GRUPOS
+
+supervisao:
+  nome: Supervisão do LCI
+  cargo: grupo
+  bio:
+    pt: "Equipe de monitores responsável pelos laboratórios e pelo website do IC"
+    en: "Team of alumni that manages the IC's laboratories and website"
+  avatar: /author_img/supervisao.jpg
+
+
+
