--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,17 @@
+# EditorConfig is awesome: https://EditorConfig.org
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-[*.css]
-indent_style = tab
-
-[*.{html,md,yaml,toml,json}]
 indent_style = space
-indent_size = 2
+indent_size = 4
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 100
 
+[*.md]
+max_line_length = off
 
+[COMMIT_EDITMSG]
+max_line_length=72
