editorconfig: trim_trailing_whitespace=true
Como muitos editores de texto gostam de deletar trailing whitespace, é
mais seguro deletar todos esses espaços logo de vez. Senão corre o
risco de alguém deletar depois aí aumenta o tamanho do diff à toa.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,11 @@
+# Configure seu editor de texto para seguir esta configuração!
+# Siga as instruções em https://EditorConfig.org
 root = true
 
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.css]
 indent_style = tab
@@ -11,4 +14,5 @@ indent_style = tab
 indent_style = space
 indent_size = 2
 
-
+[COMMIT_EDITMSG]
+max_line_length=72
