Remover autorias das páginas.
Esta PR remove os cards de autoria que apareciam nos final das páginas,
assim como os templates, configurações, e dados que estavam associados à
esta funcionalidade. Espero ter consiguido encontrar tudo...

Após conversar com mais pessoas da chefia do instituto, chegamos à
conclusão que os cards de autoria causariam mais confusão do que
eles ajudariam. Primeiramente, a maioria das páginas seria de autoria
do "Instituto" e não faria sentido atribuir a autoria a uma outra
entidade. Além disso, queremos poder remover pessoas ou alterar seus
dados sem ter que se preocupar se isso vai modificar a informação de
autoria que está associada a alguma notícia antiga. Nos raros casos
em que faz sentido ter autoria associada a uma postagem, será melhor que
ela esteja escrita em plain text no próprio markdown, que se faz em uma
assinatura de email, pois aí ela fica lá intocada mesmo se mexerem no
/data ou nos templates Hugo.

--- a/data/pessoas_e_grupos.yaml
+++ b/data/pessoas_e_grupos.yaml
@@ -1,5 +1,7 @@
 # Inclui não somente docentes, mas também grupos e comissões como a Supervisão do LCI, Secretaria Acadêmica, etc.
 
+# 1) Professores permanentes
+
 avivacqua:
   nome: Adriana Santarosa Vivacqua
   lattes: https://lattes.cnpq.br/6494676052801758
@@ -211,8 +213,7 @@ vivian:
   lattes: https://lattes.cnpq.br/6480849016794725
   cargo: assistente
 
-# SUBSTITUTOS
-
+# 2) Professores Substitutos
 
 annarafaela:
   nome: Anna Rafaela Ferreira
@@ -249,16 +250,3 @@ thiagohenrique:
 thiagorocha:
   nome: Thiago José
   cargo: substituto
-
-# GRUPOS
-
-supervisao:
-  nome: Supervisão do LCI
-  cargo: grupo
-  bio:
-    pt: "Equipe de monitores responsável pelos laboratórios e pelo website do IC"
-    en: "Team of alumni that manages the IC's laboratories and website"
-  avatar: /author_img/supervisao.jpg
-
-
-
