adicionado Corpo Técnico e links entre os três (docentes, tecnicos e estrutura-administrativa)

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -15,7 +15,8 @@
       children:
         - name: Corpo Docente
           url: /info/docentes/
-        # - name: Corpo Técnico
+        - name: Corpo Técnico
+          url: /info/tecnicos/
 
 - name: Ensino
   children:
