--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -5,7 +5,7 @@
 # 1) Professores permanentes
 
 avivacqua:
-  nome: Adriana Santarosa Vivacqua
+  nome: Adriana S. Vivacqua
   lattes: https://lattes.cnpq.br/6494676052801758
   cargo: associado
 
@@ -36,7 +36,7 @@ carla:
   cargo: associado
 
 carolina:
-  nome: Carolina Gil Marcelino
+  nome: Carolina Marcelino
   lattes: https://lattes.cnpq.br/3289676418940953
   cargo: adjunto
 
@@ -52,7 +52,7 @@ danielbastos:
   cargo: assistente
 
 dgalfaro:
-  nome: Daniel Gregório Alfaro Vigo
+  nome: Daniel G. Alfaro Vigo
   site: https://ic.ufrj.br/~dgalfaro
   lattes: https://lattes.cnpq.br/8694890749217765
   cargo: associado
@@ -68,7 +68,7 @@ eldany:
   cargo: adjunto
 
 gabriel:
-  nome: Gabriel Pereira da Silva
+  nome: Gabriel P. Silva
   site: https://ic.ufrj.br/~gabriel
   lattes: https://lattes.cnpq.br/8636301961155552
   cargo: titular
@@ -85,7 +85,7 @@ giseli:
   cargo: assistente
 
 hugonobrega:
-  nome: Hugo de Holanda Cunha Nobrega
+  nome: Hugo Nobrega
   site: https://hugonobrega.com/
   lattes: https://lattes.cnpq.br/6062840240299930
   cargo: adjunto
@@ -96,7 +96,7 @@ hugomg:
   cargo: assistente
 
 jpaixao:
-  nome: João Antonio Recio Paixão
+  nome: João Paixão
   lattes: https://lattes.cnpq.br/5705386762324718
   cargo: assistente
 
@@ -107,7 +107,7 @@ jcps:
   cargo: associado
 
 jonice:
-  nome: Jonice de Oliveira Sampaio
+  nome: Jonice Oliveira
   site: https://ic.ufrj.br/~jonice
   lattes: https://lattes.cnpq.br/0990344839864230
   cargo: associado
@@ -128,7 +128,7 @@ juvianna:
   cargo: associado
 
 luziane:
-  nome: Luziane Ferreira de Mendonça
+  nome: Luziane F. de Mendonça
   site: https://ic.ufrj.br/~luziane
   lattes: https://lattes.cnpq.br/4092412037479077
   cargo: associado
@@ -167,7 +167,7 @@ mitre:
   cargo: titular
 
 paulomann:
-  nome: Paulo Roberto Mann Marques Júnior
+  nome: Paulo Mann
   lattes: https://lattes.cnpq.br/3571577377652346
   cargo: assistente
 
