--- a/data/tecnicos.yaml
+++ b/data/tecnicos.yaml
@@ -8,7 +8,7 @@ patriciawirzmarinhomanede:
   cargo: tecnico
 
 rodrigomello:
-  nome: Rodrigo Araujo de Mello
+  nome: Rodrigo Araújo de Mello
   email: governanca
   cargo: tecnico
 
