--- a/data/outros.yaml
+++ b/data/outros.yaml
@@ -1,2 +1,8 @@
-# adicionar discentes aqui
+# membro da COAA
+cassioefs:
+  nome: Cássio Silva
+
+# membro da COAA
+joaovbn:
+  nome: João Victor Nascimento
 
