não mostrar mais cargos dos técnicos
Refs #13

--- a/data/grupos.yaml
+++ b/data/grupos.yaml
@@ -16,14 +16,14 @@ secgrad:
   nome: Secretaria Acadêmica de Graduação
   tipo: secretaria
   membros:
-    - fabianabarbosarocha
-    - rerisonwilbercavalcanterocha
+    - fabianarocha
+    - rerison
 
 secgerencial:
   nome: Secretaria de Atividades Gerenciais
   tipo: secretaria
   membros:
-    - marcusviniciusmoliveira
+    - marcusoliveira
 
 gabinete:
   nome: Secretaria de Gabinete da Direção
